@@ -92,5 +92,12 @@ debug_level   INTEGER
               level of debug report; values <= 0 switch the debug_mode off 
               DEFAULT: 0
 
+do_orthoovp   LOGICAL
+              if dealing with a non-orthogonal basis set, orthogonalize
+              the basis. Helps to improve the accuracy of the calculations,
+              especially for large cells.
+              DEFAULT: .TRUE.
+
+
 ==============================================================================
 
