@@ -3,6 +3,9 @@
             WanT code:  Log of Changes 
 =======================================================
 
+13 Apr 2009      orthogonalization of ovp added to cmplx_bands.f90 to 
+                 improve numerical accuracy. (AF)
+
 08 Apr 2009      Updates in the script lib to run tests. (AF)
 
 31 Mar 2009      Bug fixed in dealing with CRYSTAL06 datafiles: wan_eig are
